# x-admin

./: .pre-commit-config.yaml  makefile  pyproject.toml  requirements.txt
femto_admin/: __init__.py  admin.py  auth_dep.py  utils.py
femto_admin/providers/: __init__.py  auth.py  login.py
femto_admin/templates/: base.html  edit.html  index.html  init.html  layout.html  table.html
femto_admin/templates/components/: aside.html  footer.html  global_actions.html  modal.html
femto_admin/templates/components/inputs/: list.html  select.html
femto_admin/templates/providers/login/: login.html  password.html
femto_admin/templates/views/: form.html  table.html
femto_admin/utils/: fmap.py
sample_apps/minimal/: main.py  models.py  requirements.txt
sample_apps/minimal/templates/: dashboard.html
x_admin/: admin.py
